调整API适配jdk11以下